# BTC-Price-Ticker

./: .gitignore  CMakeLists.txt  README.md  partitions_lvgl.csv  sdkconfig  sdkconfig.old
3mf/: all.3mf  btc_tracker.3mf
3mf/Individual/: base.3mf  caps.3mf  case.3mf  top.3mf
Kicad/: WeightingScales.kicad_pcb  WeightingScales.kicad_pro  WeightingScales.kicad_sch  scales-all-pos.csv  scalesBOM.csv
cad/: btc_tracker.f3d
components/lvgl/: lv_conf_template.h
components/lvgl/examples/widgets/label/: lv_example_label_1.c
main/: CMakeLists.txt  board.h  httpGetClient.c  my_data.h  screen.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
main/ui/fonts/: ui_font_Display24.c  ui_font_Display48.c  ui_font_MontBig.c
main/ui/images/: ui_img_btc_logo1_png.c  ui_img_btc_logo_png.c  ui_img_smallwps_png.c  ui_img_wifi_logo2_png.c  ui_img_wifi_logo3_png.c
main/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
